--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2>Exchangometer</h2>
             </header>    
             <div class="dropdown">
-                <button onclick="myFunction()" class="dropdown-content">Dropdown</button>
+                <button class="dropdown-content">Dropdown</button>
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#">$</a>
                   <a href="#">¥</a>
