--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
-        <link rel="stylesheet" href="jquery">
-        <link href="api" rel="stylesheet">
         <link rel="stylesheet" href="./assets/style.css">
         <title>Currency Exchange</title>
       </head>
@@ -59,7 +57,8 @@
     
   </div>
 </nav>
-
+    
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js></script>
     <script src="./assets/script.js"></script>
 </body>
 </html>
