--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <section class="section is-small">
   <h2 class="title">Current USD Exchange Rates :</h2>
   <div class="container is-fluid">
-    <div class="notification is-primary">
+    <div id="currentRates" class="notification is-primary">
       
     </div>
   </div>
