currency input fields

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="./assets/style.css">
         <title>Currency Exchange</title>
       </head>
@@ -55,6 +56,12 @@
     </div>
  </div>
 </nav>
+
+<div>
+<input class="input custbox" type="text" placeholder="Currency Input">
+<i class="fas fa-arrow-circle-right"></i>
+<input class="input custbox" type="text" placeholder="Currency Output">
+</div>
 
 <section class="section is-small">
   <h2 class="title">Current USD Exchange Rates :</h2>
