--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <form>
   <div class="container is-fluid searchBox">
     <div class="select">
-      <select>
+      <select name="currencySource" id="currencySource" >
         <option value="AED">AED - Emirati Dirham</option>
         <option value="AFN">AFN - Afghan Afghani</option>
         <option value="ALL">ALL - Albanian Lek</option>
@@ -234,7 +234,7 @@
     </div>
     <i class="fas fa-arrow-circle-right custFav"></i>
     <div class="select">
-      <select>
+      <select name="currencyTo" id="currencyTo">
         <option value="AED">AED - Emirati Dirham</option>
         <option value="AFN">AFN - Afghan Afghani</option>
         <option value="ALL">ALL - Albanian Lek</option>
