working console sumbit and currency response

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </div>
  </div>
 </nav>
-<form>
+<form id="rateForm">
   <div class="container is-fluid searchBox">
     <div class="select">
-      <select name="currencySource" id="currencySource" >
+      <select name="currencyBase" id="currencyBase" >
         <option value="AED">AED - Emirati Dirham</option>
         <option value="AFN">AFN - Afghan Afghani</option>
         <option value="ALL">ALL - Albanian Lek</option>
@@ -234,7 +234,7 @@
     </div>
     <i class="fas fa-arrow-circle-right custFav"></i>
     <div class="select">
-      <select name="currencyTo" id="currencyTo">
+      <select name="currencySymbols" id="currencySymbols">
         <option value="AED">AED - Emirati Dirham</option>
         <option value="AFN">AFN - Afghan Afghani</option>
         <option value="ALL">ALL - Albanian Lek</option>
