--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </nav>
 <form id="rateForm">
   <div class="container is-fluid searchBox">
+    
     <div class="select">
       <select name="currencyBase" id="currencyBase" >
         <option value="AED">AED - Emirati Dirham</option>
@@ -411,7 +412,7 @@
   </div>
 </form>
 <section class="section is-small">
-  <h2 class="title">Current USD Exchange Rates :</h2>
+  <h2 class="title">Current Exchange Rates :</h2>
   <div class="container is-fluid">
     <div id="currentRates" class="notification is-primary">
       
