--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 </form>
 <section class="section is-small">
   <h2 class="title">Current USD Exchange Rates :</h2>
-  <div class="container is-fluid">
+  <div class="container ">
     <div id="currentRates" class="notification is-primary">
       
     </div>
