changed center of content

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 </form>
 <section class="section is-small">
   <h2 class="title">Current USD Exchange Rates :</h2>
-  <div class="container ">
+  <div class="container custRatesContain">
     <div id="currentRates" class="notification is-primary">
     </div>
   </div>
