--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 <!--Current Exhchange Rate Form-->
 <form id="rateForm">
   <div class="container is-fluid searchBox">
-    
     <div class="select">
       <select name="currencyBase" id="currencyBase" >
         <option value="AED">AED - Emirati Dirham</option>
@@ -414,7 +413,7 @@
 </form>
 <section class="section is-small">
   <h2 class="title">Current Exchange Rates :</h2>
-  <div class="container is-fluid">
+  <div class="container custRatesContain ">
     <div id="currentRates" class="notification is-primary">
     </div>
   </div>
