--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <title>Currency Exchange</title>
     </head>
 
-<body>
+<body class="custBod">
     <nav class="navbar custNav" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
+  <div class="navbar-brand custDiv">
     <h1 class="navbar-item">Currency Exchange Rates</h1>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -413,7 +413,7 @@
 </form>
 <section class="section is-small">
   <h2 class="title">Current Exchange Rates :</h2>
-  <div class="container custRatesContain ">
+  <div class="container custRatesContain">
     <div id="currentRates" class="notification is-primary">
     </div>
   </div>
@@ -776,7 +776,7 @@
         <option value="ZWL">ZWL - Zimbabwean Dollar</option>     
       </select>
     </div>
-    <input class="input submitBtn" type="text" value="Submit" id="submitBtn">
+    <input class="input submitBtn" type="submit" value="Submit" id="submitBtn">
   </div>
 </form>
     
