Currency Converter Form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html class="custHtml">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,7 @@
         <title>Currency Exchange</title>
     </head>
 
-<body class="custBod">
+<body>
     <nav class="navbar custNav" role="navigation" aria-label="main navigation">
   <div class="navbar-brand custDiv">
     <h1 class="navbar-item">Currency Exchange Rates</h1>
@@ -785,4 +786,5 @@
     <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js></script>
     <script src="./assets/script.js"></script>
 </body>
+</html>
 </html>
