Working exhcange rate section

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
   <div class="container is-fluid searchBox">
     <input class="input custInput" type="text" placeholder="$ Amount">
     <div class="select">
-      <select name="currencyBase" id="currencyBase" >
+      <select name="" id="" >
         <option value="AED">AED - Emirati Dirham</option>
         <option value="AFN">AFN - Afghan Afghani</option>
         <option value="ALL">ALL - Albanian Lek</option>
@@ -603,7 +603,7 @@
     </div>
     <i class="fas fa-arrow-circle-right custFav"></i>
     <div class="select">
-      <select name="currencySymbols" id="currencySymbols">
+      <select name="" id="">
         <option value="AED">AED - Emirati Dirham</option>
         <option value="AFN">AFN - Afghan Afghani</option>
         <option value="ALL">ALL - Albanian Lek</option>
@@ -776,7 +776,7 @@
         <option value="ZWL">ZWL - Zimbabwean Dollar</option>     
       </select>
     </div>
-    <input class="input submitBtn" type="text" value="Submit" id="submitBtn">
+    <input class="input submitBtn" type="text" value="Submit" id="">
   </div>
 </form>
     
