--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 <section class="section is-small">
   <h2 class="title">Current USD Exchange Rates :</h2>
   <div class="container custRatesContain">
-    <div id="currentRates" class="notification is-primary">
+    <div id="currentRates" class="notification">
     </div>
   </div>
 </section>
@@ -779,9 +779,7 @@
     <input class="input submitBtn" type="text" value="Submit" id="submitBtn">
   </div>
 </form>
-    
- 
-    
+
     <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js></script>
     <script src="./assets/script.js"></script>
 </body>
