--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <html class="custHtml">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="./assets/style.css">
@@ -12,8 +11,8 @@
     </head>
 
 <body>
-    <nav class="navbar custNav" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand custDiv">
+     <nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
     <h1 class="navbar-item">Currency Exchange Rates</h1>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
