--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar custNav" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand custDiv">
+  <div class="navbar-brand">
     <h1 class="navbar-item">Currency Exchange Rates</h1>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -415,7 +415,7 @@
 <section class="section is-small">
   <h2 class="title">Current Exchange Rates :</h2>
   <div class="container custRatesContain">
-    <div id="currentRates" class="notification is-primary">
+    <div id="currentRates" class="notification ratesBox">
     </div>
   </div>
 </section>
@@ -777,7 +777,7 @@
         <option value="ZWL">ZWL - Zimbabwean Dollar</option>     
       </select>
     </div>
-    <input class="input submitBtn" type="text" value="Submit" id="">
+    <input class="input submitBtn" type="submit" value="Submit" id="">
   </div>
 </form>
     
