Working clear buttons

--- a/index.html
+++ b/index.html
@@ -417,6 +417,9 @@
     <div id="currentRates" class="notification">
     </div>
   </div>
+  <div><br>
+    <button id="rateClear" class="clearBtn">Clear</button>
+  </div>
 </section>
 
 <!--Currency Conversion Form-->
@@ -780,6 +783,9 @@
     <div class="container custRatesContain">
       <div id="convertedResult" class="notification">
       </div>
+    </div>
+    <div><br>
+      <button id="convertClear" class="clearBtn">Clear</button>
     </div>
 </section>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js></script>
