--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
 
 <body>
+
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="https://bulma.io">
@@ -55,6 +56,7 @@
     </div>
   </nav>
 <!--Current Exhchange Rate Form-->
+
 <section class="section is-small">
   <h2 class="title">Current Exchange Rates :</h2>
   <form id="rateForm">
@@ -92,6 +94,7 @@
         <option value="CHF">CHF - Swiss Franc</option>
         <option value="CLF">CLF - Central African Franc</option>
         <option value="CLP">CLP - Chilean Peso</option>
+        <option value="CNH">CNH - Chinese Yuan Renminbi</option>
         <option value="CNY">CNY - Chinese Yuan Renminbi</option>
         <option value="COP">COP - Colombian Peso</option>
         <option value="CRC">CRC - Costa Rican Colon</option>
@@ -157,6 +160,7 @@
         <option value="MNT">MNT - Mongolian Tughrik</option>
         <option value="MOP">MOP - Macau Pataca</option>
         <option value="MRO">MRO - Mauritanian Ouguiya</option>
+        <option value="MRU">MRU - Mauritanian Ouguiya</option>
         <option value="MUR">MUR - Mauritian Rupee</option>
         <option value="MVR">MVR - Maldivian Rufiyaa</option>
         <option value="MWK">MWK - Malawian Kwacha</option>
@@ -192,7 +196,9 @@
         <option value="SLL">SLL - Sierra Leonean Leone</option>
         <option value="SOS">SOS - Somali Shilling</option>
         <option value="SRD">SRD - Surinamese Dollar</option>
+        <option value="SSP">SSP - South Sudanese Pound</option>
         <option value="STD">STD - Sao Tomean Dobra</option>
+        <option value="STN">STN - Sao Tomean Dobra</option>
         <option value="SVC">SVC - Salvodoran Colon</option>
         <option value="SYP">SYP - Syrian Pound</option>
         <option value="SZL">SZL - Swazi Lilangeni</option>
@@ -210,6 +216,7 @@
         <option value="USD">USD - US Dollar</option>
         <option value="UYU">UYU - Uruguayian Peso</option>
         <option value="UZS">UZS - Uzbekistani Som</option>
+        <option value="VES">VES - Venezuelan Bolivar</option>
         <option value="VND">VND - Vietnamese Dong</option>
         <option value="VUV">VUV - Ni-Vanuatu Vatu</option>
         <option value="WST">WST - Samoan Tala</option>
@@ -219,7 +226,9 @@
         <option value="XCD">XCD - East Caribbean Dollar</option>
         <option value="XDR">XDR - IMR Special Drawing Rights</option>
         <option value="XOF">XOF - CFA Franc</option>
+        <option value="XPD">XPD - Palladium Ounce</option>
         <option value="XPF">XPF - CFP Franc</option>
+        <option value="XPT">XPT - Platinum Ounce</option>
         <option value="YER">YER - Yemeni Rial</option>
         <option value="ZAR">ZAR - South African Rand</option>
         <option value="ZMW">ZMW - Zambian Kwacha</option>
@@ -260,6 +269,7 @@
         <option value="CHF">CHF - Swiss Franc</option>
         <option value="CLF">CLF - Central African Franc</option>
         <option value="CLP">CLP - Chilean Peso</option>
+        <option value="CNH">CNH - Chinese Yuan Renminbi</option>
         <option value="CNY">CNY - Chinese Yuan Renminbi</option>
         <option value="COP">COP - Colombian Peso</option>
         <option value="CRC">CRC - Costa Rican Colon</option>
@@ -325,6 +335,7 @@
         <option value="MNT">MNT - Mongolian Tughrik</option>
         <option value="MOP">MOP - Macau Pataca</option>
         <option value="MRO">MRO - Mauritanian Ouguiya</option>
+        <option value="MRU">MRU - Mauritanian Ouguiya</option>
         <option value="MUR">MUR - Mauritian Rupee</option>
         <option value="MVR">MVR - Maldivian Rufiyaa</option>
         <option value="MWK">MWK - Malawian Kwacha</option>
@@ -360,7 +371,9 @@
         <option value="SLL">SLL - Sierra Leonean Leone</option>
         <option value="SOS">SOS - Somali Shilling</option>
         <option value="SRD">SRD - Surinamese Dollar</option>
+        <option value="SSP">SSP - South Sudanese Pound</option>
         <option value="STD">STD - Sao Tomean Dobra</option>
+        <option value="STN">STN - Sao Tomean Dobra</option>
         <option value="SVC">SVC - Salvodoran Colon</option>
         <option value="SYP">SYP - Syrian Pound</option>
         <option value="SZL">SZL - Swazi Lilangeni</option>
@@ -378,6 +391,7 @@
         <option value="USD">USD - US Dollar</option>
         <option value="UYU">UYU - Uruguayian Peso</option>
         <option value="UZS">UZS - Uzbekistani Som</option>
+        <option value="VES">VES - Venezuelan Bolivar</option>
         <option value="VND">VND - Vietnamese Dong</option>
         <option value="VUV">VUV - Ni-Vanuatu Vatu</option>
         <option value="WST">WST - Samoan Tala</option>
@@ -387,7 +401,9 @@
         <option value="XCD">XCD - East Caribbean Dollar</option>
         <option value="XDR">XDR - IMR Special Drawing Rights</option>
         <option value="XOF">XOF - CFA Franc</option>
+        <option value="XPD">XPD - Palladium Ounce</option>
         <option value="XPF">XPF - CFP Franc</option>
+        <option value="XPT">XPT - Platinum Ounce</option>
         <option value="YER">YER - Yemeni Rial</option>
         <option value="ZAR">ZAR - South African Rand</option>
         <option value="ZMW">ZMW - Zambian Kwacha</option>
@@ -445,6 +461,7 @@
             <option value="CHF">CHF - Swiss Franc</option>
             <option value="CLF">CLF - Central African Franc</option>
             <option value="CLP">CLP - Chilean Peso</option>
+            <option value="CNH">CNH - Chinese Yuan Renminbi</option>
             <option value="CNY">CNY - Chinese Yuan Renminbi</option>
             <option value="COP">COP - Colombian Peso</option>
             <option value="CRC">CRC - Costa Rican Colon</option>
@@ -510,6 +527,7 @@
             <option value="MNT">MNT - Mongolian Tughrik</option>
             <option value="MOP">MOP - Macau Pataca</option>
             <option value="MRO">MRO - Mauritanian Ouguiya</option>
+            <option value="MRU">MRU - Mauritanian Ouguiya</option>
             <option value="MUR">MUR - Mauritian Rupee</option>
             <option value="MVR">MVR - Maldivian Rufiyaa</option>
             <option value="MWK">MWK - Malawian Kwacha</option>
@@ -545,7 +563,9 @@
             <option value="SLL">SLL - Sierra Leonean Leone</option>
             <option value="SOS">SOS - Somali Shilling</option>
             <option value="SRD">SRD - Surinamese Dollar</option>
+            <option value="SSP">SSP - South Sudanese Pound</option>
             <option value="STD">STD - Sao Tomean Dobra</option>
+            <option value="STN">STN - Sao Tomean Dobra</option>
             <option value="SVC">SVC - Salvodoran Colon</option>
             <option value="SYP">SYP - Syrian Pound</option>
             <option value="SZL">SZL - Swazi Lilangeni</option>
@@ -563,6 +583,7 @@
             <option value="USD">USD - US Dollar</option>
             <option value="UYU">UYU - Uruguayian Peso</option>
             <option value="UZS">UZS - Uzbekistani Som</option>
+            <option value="VES">VES - Venezuelan Bolivar</option>
             <option value="VND">VND - Vietnamese Dong</option>
             <option value="VUV">VUV - Ni-Vanuatu Vatu</option>
             <option value="WST">WST - Samoan Tala</option>
@@ -572,7 +593,9 @@
             <option value="XCD">XCD - East Caribbean Dollar</option>
             <option value="XDR">XDR - IMR Special Drawing Rights</option>
             <option value="XOF">XOF - CFA Franc</option>
+            <option value="XPD">XPD - Palladium Ounce</option>
             <option value="XPF">XPF - CFP Franc</option>
+            <option value="XPT">XPT - Platinum Ounce</option>
             <option value="YER">YER - Yemeni Rial</option>
             <option value="ZAR">ZAR - South African Rand</option>
             <option value="ZMW">ZMW - Zambian Kwacha</option>
@@ -613,6 +636,7 @@
             <option value="CHF">CHF - Swiss Franc</option>
             <option value="CLF">CLF - Central African Franc</option>
             <option value="CLP">CLP - Chilean Peso</option>
+            <option value="CNH">CNH - Chinese Yuan Renminbi</option>
             <option value="CNY">CNY - Chinese Yuan Renminbi</option>
             <option value="COP">COP - Colombian Peso</option>
             <option value="CRC">CRC - Costa Rican Colon</option>
@@ -678,6 +702,7 @@
             <option value="MNT">MNT - Mongolian Tughrik</option>
             <option value="MOP">MOP - Macau Pataca</option>
             <option value="MRO">MRO - Mauritanian Ouguiya</option>
+            <option value="MRU">MRU - Mauritanian Ouguiya</option>
             <option value="MUR">MUR - Mauritian Rupee</option>
             <option value="MVR">MVR - Maldivian Rufiyaa</option>
             <option value="MWK">MWK - Malawian Kwacha</option>
@@ -713,7 +738,9 @@
             <option value="SLL">SLL - Sierra Leonean Leone</option>
             <option value="SOS">SOS - Somali Shilling</option>
             <option value="SRD">SRD - Surinamese Dollar</option>
+            <option value="SSP">SSP - South Sudanese Pound</option>
             <option value="STD">STD - Sao Tomean Dobra</option>
+            <option value="STN">STN - Sao Tomean Dobra</option>
             <option value="SVC">SVC - Salvodoran Colon</option>
             <option value="SYP">SYP - Syrian Pound</option>
             <option value="SZL">SZL - Swazi Lilangeni</option>
@@ -731,6 +758,7 @@
             <option value="USD">USD - US Dollar</option>
             <option value="UYU">UYU - Uruguayian Peso</option>
             <option value="UZS">UZS - Uzbekistani Som</option>
+            <option value="VES">VES - Venezuelan Bolivar</option>
             <option value="VND">VND - Vietnamese Dong</option>
             <option value="VUV">VUV - Ni-Vanuatu Vatu</option>
             <option value="WST">WST - Samoan Tala</option>
@@ -740,7 +768,9 @@
             <option value="XCD">XCD - East Caribbean Dollar</option>
             <option value="XDR">XDR - IMR Special Drawing Rights</option>
             <option value="XOF">XOF - CFA Franc</option>
+            <option value="XPD">XPD - Palladium Ounce</option>
             <option value="XPF">XPF - CFP Franc</option>
+            <option value="XPT">XPT - Platinum Ounce</option>
             <option value="YER">YER - Yemeni Rial</option>
             <option value="ZAR">ZAR - South African Rand</option>
             <option value="ZMW">ZMW - Zambian Kwacha</option>
